[project]
name = "nonefly-applets"
version = "0.1.0"
description = "NoneBot2 instances manager host for NoneDesktop applications."
authors = [
    {name = "HivertMoZara", email = "worldmozara@163.com"},
]
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.90,<1",
    "uvicorn>=0.22,<1",
    "websockets>=11.0,<12",
    "nonebot-desktop-wing>=0.2.8"
]
requires-python = ">=3.9"
readme = "README.md"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["*.pyi"]
